--- a/future/CMakeLists.txt
+++ b/future/CMakeLists.txt
@@ -35,8 +35,10 @@ link_libraries(Threads::Threads)
 if (YACLIB)
   FetchContent_Declare(yaclib
     GIT_REPOSITORY https://github.com/YACLib/YACLib.git
-    GIT_TAG main
+    GIT_TAG "${YACLIB}"
     )
+  set(YACLIB_CXX_STANDARD 20)
+  list(APPEND YACLIB_FLAGS "ATOMIC_EVENT")
   FetchContent_MakeAvailable(yaclib)
   link_libraries(yaclib)
 endif ()
